Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126262

ERROR: AddressSanitizer: tst_surface heap-use-after-free

    XMLWordPrintable

Details

    • 1cb07aa7e (dev), ac4fa440c (dev), d86319a89 (6.8)

    Description

      Found on nightly health check https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly1718142302

      ==2106==ERROR: AddressSanitizer: heap-use-after-free on address 0x6080002aa3b0 at pc 0x7f4fe32c9634 bp 0x7ffefe5c97d0 sp 0x7ffefe5c97c8
      agent:2024/06/11 23:15:37 build.go:404: WRITE of size 1 at 0x6080002aa3b0 thread T0
      agent:2024/06/11 23:15:37 build.go:404:     #0 0x7f4fe32c9633 in QtWaylandClient::QWaylandBuffer::setBusy(bool) /home/qt/work/qt/qtwayland/src/client/qwaylandbuffer_p.h:40
      agent:2024/06/11 23:15:37 build.go:404:     #1 0x7f4fe32b086d in QtWaylandClient::QWaylandWindow::reset() /home/qt/work/qt/qtwayland/src/client/qwaylandwindow.cpp:337
      agent:2024/06/11 23:15:37 build.go:404:     #2 0x7f4fe32b4d7f in QtWaylandClient::QWaylandWindow::setVisible(bool) /home/qt/work/qt/qtwayland/src/client/qwaylandwindow.cpp:582
      agent:2024/06/11 23:15:37 build.go:404:     #3 0x7f4fe108879b in QWindowPrivate::setVisible(bool) /home/qt/work/qt/qtbase/src/gui/kernel/qwindow.cpp:420
      agent:2024/06/11 23:15:37 build.go:404:     #4 0x7f4fe108afb4 in QWindow::setVisible(bool) /home/qt/work/qt/qtbase/src/gui/kernel/qwindow.cpp:693
      agent:2024/06/11 23:15:37 build.go:404:     #5 0x7f4fe109305e in QWindowPrivate::destroy() /home/qt/work/qt/qtbase/src/gui/kernel/qwindow.cpp:2083
      agent:2024/06/11 23:15:37 build.go:404:     #6 0x7f4fe1086bbb in QWindow::~QWindow() /home/qt/work/qt/qtbase/src/gui/kernel/qwindow.cpp:185
      agent:2024/06/11 23:15:37 build.go:404:     #7 0x7f4fe0f810fa in QPaintDeviceWindow::~QPaintDeviceWindow() /home/qt/work/qt/qtbase/src/gui/kernel/qpaintdevicewindow.h:16
      agent:2024/06/11 23:15:37 build.go:404:     #8 0x7f4fe1055e5d in QRasterWindow::~QRasterWindow() /home/qt/work/qt/qtbase/src/gui/kernel/qrasterwindow.cpp:78
      agent:2024/06/11 23:15:37 build.go:404:     #9 0x55ae8d3266fd in tst_surface::createSubsurface() /home/qt/work/qt/qtwayland/tests/auto/client/surface/tst_surface.cpp:186
      agent:2024/06/11 23:15:37 build.go:404:     #10 0x55ae8d328a7a in tst_surface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) /home/qt/work/qt/qtwayland_standalone_tests/tests/auto/client/surface/tst_surface_autogen/include/tst_surface.moc:125
      

      Full log: https://testresults.qt.io/coin/api/log/qt/qtwayland/b1227079e2068515d9a3661828874636d25e2aa6/LinuxopenSUSE_15_5x86_64LinuxopenSUSE_15_5x86_64GCCqtci-linux-openSUSE-15.5-x86_64-52-4c9875Sccache_UseAddressSanitizer_UseConfigure_WarningsAreErrors/469960df9c007d7ec95f59d25721ed5409200e9b/test_1718146861/log.txt.gz

      Attachments

        For Gerrit Dashboard: QTBUG-126262
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            jujokini Jukka Jokiniva
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes